# py_lab

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cleanup-local.yml  publish-image.yml
data/: demo.csv  demo_ai.csv  template.xlsx
src/py_lab/: analyze_excel.py  anomaly.py  api.py  cli.py  data_pipeline.py  io_utils.py  logging_utils.py  model_store.py  schemas.py  settings.py  signing.py  storage.py  train_iforest.py  webapp.py
tests/: test_anomaly.py  test_data_pipeline.py  test_io_utils.py
