[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "py-lab"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.poetry.dependencies]
pandas = "^2.3.3"
matplotlib = "^3.10.8"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
python-multipart = "^0.0.21"
scikit-learn = "^1.8.0"
joblib = "^1.5.3"
openpyxl = "^3.1.5"
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.13,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[project.scripts]
py-lab = "py_lab.cli:main"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["py_lab"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pandas.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.poetry.scripts]
py-lab = "py_lab.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
mypy = "*"

